Updated examples of helpful annotations

--- a/notebooks/Inter-Rater Agreement Analysis.ipynb
+++ b/notebooks/Inter-Rater Agreement Analysis.ipynb
@@ -38,8 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import Notes and Ratings data\n",
-    "notes = pd.read_csv('../data/notes-00000.tsv', sep='\\t', header=0)\n",
+    "# Import Ratings data\n",
     "ratings = pd.read_csv('../data/ratings-00000.tsv', sep='\\t', header=0)"
    ]
   },
@@ -167,25 +166,181 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Tweets with >5 ratings where >90% of raters agreed with each other:\n"
+      "Percent of Tweets with >5 ratings where >90% of raters agreed with each other:\n",
+      "0.22189552092521808\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2264"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('Number of Tweets with >5 ratings where >90% of raters agreed with each other:')\n",
+    "# Consensus ratings have >=5 ratings with >90% agreement on helpfulness\n",
+    "consensus = gb_min5[((gb_min5[('helpfulBinary', 'mean')] >= 0.9) | \n",
+    "                     (gb_min5[('helpfulBinary', 'mean')] <= 0.1))]\n",
     "\n",
-    "gb_min5[((gb_min5[('helpfulBinary', 'mean')] >= 0.9) | \n",
-    "         (gb_min5[('helpfulBinary', 'mean')] <= 0.1))].shape[0]"
+    "print('Percent of Tweets with >5 ratings where >90% of raters agreed with each other:')\n",
+    "print(consensus.shape[0] / gb_min5.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0232972e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import and clean notes data\n",
+    "notes = pd.read_csv('../data/notes-with-tweet-text.csv', header=0)\n",
+    "notes_ids = pd.read_csv('../data/notes-00000.tsv', sep='\\t', header=0)\n",
+    "assert notes.shape[0] == notes_ids.shape[0]\n",
+    "notes.iloc[:, 0:4] = notes_ids.iloc[:, 0:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2ac8e4ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Examples of Helpful Notes\n",
+      "\n",
+      "Tweet #1: Apple is working on developing smart wedding rings which will let you know your partners location, where they have been, and if they take the ring off https://t.co/gIIhx6gGC5\n",
+      "\n",
+      "Annotation #1: Old rumor, based on a ring patent for a gesture input, nothing to do with spousal surveillance.   https://www.patentlyapple.com/patently-apple/2021/04/apple-reveals-future-smart-ring-designs-like-a-multi-ring-system-rings-that-work-with-apple-watch-to-control-on-screen-cont.html  \n",
+      "\n",
+      "Tweet #2: If media reports are accurate, and Judge Jackson has been chosen as the Supreme Court nominee to replace Justice Breyer, it means the radical Left has won President Biden over yet again.\n",
+      "\n",
+      "The attacks by the Left on Judge Childs from South Carolina apparently worked.\n",
+      "\n",
+      "Annotation #2: Lindsay Graham voted to confirm Judge Jackson to the DC appellate court last year.  https://www.cnn.com/2021/06/14/politics/ketanji-brown-jackson-confirmation-vote-senate/index.html\n",
+      "\n",
+      "Tweet #3: \"Our servicemen and women deserve better from their Commander-in-Chief. Cutting our military and defense spending signals weakness to our foreign adversaries and further threatens our national security.” @RepStefanik \n",
+      "https://t.co/VmtorWwUvc https://t.co/BAaQSxoid3\n",
+      "\n",
+      "Annotation #3: President Biden’s $813 billion proposal is a 4% increase for the Pentagon, which already spends more than the next 11 countries combined.  https://www.theguardian.com/us-news/2022/apr/03/biden-record-defense-budget-progressive-spending-priorities\n",
+      "\n",
+      "Tweet #4: Trevor Bauer and the #Mets have a deal.\n",
+      "\n",
+      "Annotation #4: The Dodgers have signed Bauer. https://twitter.com/BleacherReport/status/1357777683577327616\n",
+      "\n",
+      "Tweet #5: This is what happens when you extend unemployment benefits for too long and add a $1400 stimulus payment to it.  Right when employers need workers to fully open back up, few can be found. https://t.co/DlrQp8Vzw1\n",
+      "\n",
+      "Annotation #5: This is anti-stimulus and anti-unemployment rhetoric. It’s not supported by facts.    WSJ: “Is $600 a Week in Extra Unemployment Aid Deterring People From Seeking Work?” [7/29/2020]  https://www.wsj.com/amp/articles/is-600-a-week-in-extra-unemployment-aid-deterring-people-from-seeking-work-11596015000    This is about the previous stimulus but discusses relevant studies.\n",
+      "\n",
+      "Tweet #6: Whenever I get sad about all my past toxic romantic relationships I remember these two dated while making Silence of the Lambs. https://t.co/TSjPAXFB86\n",
+      "\n",
+      "Annotation #6: Brooke Smith, the actress who played Catherine Martin in “Silence of the Lambs,” denied in the thread’s replies that she ever dated Ted Levine, who played Buffalo Bill in the film.  https://twitter.com/iam_brookesmith/status/1503571733063766022?s=21\n",
+      "\n",
+      "Tweet #7: BOMBSHELL: Biden administration blocked Texas from increasing power as Texas begged for help a week before catastrophic polar vortex. \n",
+      "\n",
+      "Texas asked to temporarily lift regulations on energy output to avoid disaster. Biden's DOE refused to help due to \"green energy standards\". https://t.co/Zt52hT8dzL\n",
+      "\n",
+      "Annotation #7: The attached images clearly state the exact opposite of what is alleged in the Tweet. The DOE authorized Texas firms to produce more energy: https://www.khou.com/article/news/verify/verify-energy-department-texas-emergency-exceed-pollution-limits/507-50b56a9c-f84f-4db3-9c29-3c97435196fe\n",
+      "\n",
+      "Tweet #8: Unexpected #Tsunami \n",
+      "\n",
+      "#HungaTongaHungaHaapai #Tsunami #Tonga #Earthquake https://t.co/p16v9c0zLt\n",
+      "\n",
+      "Annotation #8: This video was taken before the recent volcanic eruption and following tsunami in Tonga in January 2022. The video – uploaded on December 6th, 2021 – can be found here: https://www.youtube.com/watch?v=QehiwX4VrbU\n",
+      "\n",
+      "Tweet #9: Women aren’t supposed to have periods🥴 but many are not ready for that conversation https://t.co/giII0bc09x\n",
+      "\n",
+      "Annotation #9: The menstrual cycle is a perfectly normal part of life for women from puberty through menopause. It is a normal biological process. https://my.clevelandclinic.org/health/articles/10132-normal-menstruation\n",
+      "\n",
+      "Tweet #10: Don’t you find it odd that women in America are being treated worse than women in Afghanistan?  We wasted 2trillion dollars plus to go into Afghanistan to liberate their women and children?  Something ain’t right here folks. Are you catching on yet?\n",
+      "\n",
+      "Annotation #10: Women in Afghanistan are in great peril. This kind of divisive language is misleading and demonstrably incorrect.    https://www.latintimes.com/woman-recalls-being-shot-eyes-gouged-out-brutal-torture-taliban-urges-women-join-482016    https://www.wsj.com/articles/afghans-tell-of-executions-forced-marriages-in-taliban-held-areas-11628780820    https://www.reuters.com/article/us-afghanistan-rights-women/invisible-taliban-child-brides-widows-trapped-as-sex-slaves-idUSKCN1B31PL\n",
+      "\n",
+      "Tweet #11: 1/ I hear that New York progressive socialist Rep. @AOC is coming to Houston with $2M for weather relief. The gesture is appreciated but it doesn’t remove the fact that her green new deal philosophy failed Texans.  https://t.co/zGm0o6CqKn\n",
+      "\n",
+      "Annotation #11: The main culprit of the power crisis was the lack of Natural Gas infrastructure weatherization. The Green New Deal is an outline of steps to foster economic growth while combatting climate crisis from February 2019 and has not been implemented nationally nor in Texas.    https://www.yahoo.com/now/texas-governor-walks-back-fox-052453616.html  https://www.congress.gov/116/bills/hres109/BILLS-116hres109ih.pdf\n",
+      "\n",
+      "Tweet #12: Joe Biden appears to have fallen asleep during a meeting with the Prime Minister of Israel. https://t.co/wdqHRmKC3G\n",
+      "\n",
+      "Annotation #12: Joe Biden did not fall asleep during the meeting with the new Israeli Prime Minister as can be seen in the original video (below).   As illustrated by CNN's fact-checker, Daniel Dale: https://twitter.com/ddale8/status/1431733791555526661  Original video: https://t.co/1jC9JjOXag?amp=1  \n",
+      "\n",
+      "Tweet #13: Flo Jo, obvious drug user, had the nails. She died in her sleep at age 38 because that’s what a lifetime of drug use does to the body (and why it’s supposed to be banned from elite sports). https://t.co/H0XqT6ozh9\n",
+      "\n",
+      "Annotation #13: Flo Jo did not die from steroid use. She had a seizure disorder and died from a seizure. Also her nails were fake. http://articles.latimes.com/1998/oct/23/sports/sp-35391\n",
+      "\n",
+      "Tweet #14: Sadly, we passed two milestones on VAERS. Over 1 million adverse events and over 21,000 deaths. 30% of those deaths occurred on day 0, 1, or 2 following vaccination. When will federal agencies start being transparent with Americans? Why do they continue to ignore early treatment? https://t.co/K4DbcOwayo\n",
+      "\n",
+      "Annotation #14: The VAERS database contains unchecked raw reports, not scientifically verified side-effects. Citing raw data from VAERS in this way is incredibly misleading. Read more in this FactCheck.org article. https://www.factcheck.org/2021/12/scicheck-increase-in-covid-19-vaers-reports-due-to-reporting-requirements-intense-scrutiny-of-widely-given-vaccines/\n",
+      "\n",
+      "Tweet #15: Hey, great news, Google Chromium just started a war and I'm going to enjoy this one\n",
+      "\n",
+      "https://t.co/00MoEdcJry\n",
+      "\n",
+      "Annotation #15: The change does not allow websites to block view-source:. It only allows organizations to block view-source: on devices the org controls.    This is supported by Tweets by the person who made the code change in Chrome:  https://twitter.com/ericlaw/status/1458570442705362944  https://twitter.com/ericlaw/status/1458567705850564611  \n",
+      "\n",
+      "Tweet #16: Who could’ve predicted this would happen?! \n",
+      "\n",
+      "(I tweeted this in May of 2020) https://t.co/SNpPhwYCoS\n",
+      "\n",
+      "Annotation #16: It wasn’t true then, either. https://www.usatoday.com/story/news/factcheck/2020/09/01/fact-check-altered-video-purports-show-biden-asleep-live-tv/3451810001/\n",
+      "\n",
+      "Tweet #17: For 56 years, Eric Clapton never brought politics into his music.\n",
+      "\n",
+      "But when covid struck, the guitarist took a forceful — and controversial — stand. https://t.co/DnOLDc5HOA\n",
+      "\n",
+      "Annotation #17: Eric Clapton has often (but not always) been reluctant to speak about his political views but it's not true that he has never brought politics into his music. In fact he has used his career to give a platform to white supremacists. Great article about that history here:     https://www.rollingstone.com/music/music-features/eric-clapton-vaccine-lockdown-racist-comments-1239027/\n",
+      "\n",
+      "Tweet #18: @ChuckCallesto https://t.co/mqTtWAaByJ\n",
+      "\n",
+      "Annotation #18: This photo is from Wisconsin in 2011 when Scott Walker tried to gut public employee unions. Some other differences between the two protests:     https://www.jsonline.com/story/news/2021/01/08/wisconsin-act-10-protests-vs-capitol-riot-breach-4-key-differences-violence-arrests-deaths-damage/6584619002/\n",
+      "\n",
+      "Tweet #19: NYC saw a record breaking 101,275,309 cases of covid yesterday. Most of these people came from Florida to vacation in NYC.\n",
+      "\n",
+      "Annotation #19: NYC had a record number of cases yesterday, but it was 20,000, not 100 million.      https://www.bloomberg.com/news/articles/2021-12-17/new-york-reports-over-20-000-covid-19-cases-in-single-day-record\n",
+      "\n",
+      "Tweet #20: Drove by these today and my 8-year-old asked “Daddy, how do the solar panels work if they’re covered in snow and the sun’s not out?”\n",
+      "\n",
+      "Turns out 3rd graders are smarter than AOC, Elizabeth Warren, and every environmental whacko out there. https://t.co/i4cPz7zt9W\n",
+      "\n",
+      "Annotation #20: Solar panels have a variety of features that reduce snow buildup and hasten melting.  They also perform more efficiently when they are colder, which helps to compensate for reduced sunlight exposure.  https://www.energy.gov/eere/articles/let-it-snow-how-solar-panels-can-thrive-winter-weather    https://sciencing.com/solar-panel-stop-working-gets-cold-8161.html\n",
+      "\n",
+      "Tweet #21: 62 school districts in Missouri are closed, leaving thousands of parents without the choice for what is best for their child. That is unacceptable. Keep schools open and the right to decide what is best for the family for the parents.\n",
+      "\n",
+      "Annotation #21: These schools did not close preemptively to avoid COVID spread. They were closed because too many teachers and staff were sick with COVID for them to safely remain open, due at least in part to low rates of vaccination and masking in the state.     https://www.usnews.com/news/best-states/missouri/articles/2022-01-20/62-missouri-school-districts-temporarily-closed-in-january    \n",
+      "\n",
+      "Tweet #22: #Konashenkov: 🇺🇦nationalists delivered about 80 tons of ammonia to Zolochiv settlement near #Kharkov. Residents from there say nationalists teached them how to act in a #chemical attack. Nationalists planning a provocation with toxins to accuse #Russia of using chemical weapons. https://t.co/li4bURU9T7\n",
+      "\n",
+      "Annotation #22: There is no evidence that this has occurred. Foreign policy experts at the White House and elsewhere have said that this claim by Russia indicates that Russia may soon begin chemical weapons attacks and then claim that they are false flag attacks perpetrated by Ukrainians. https://www.bbc.com/news/uk-60683248\n",
+      "\n",
+      "Tweet #23: This about sums things up. https://t.co/juyJRlOO2r\n",
+      "\n",
+      "Annotation #23: The Cat in The Hat is not one of the books that the author’s estate has decided to stop publishing. https://www.nytimes.com/2021/03/04/books/dr-seuss-books.html\n",
+      "\n",
+      "Tweet #24: The Biden administration has moved Gitmo detainees to the front of the line for COVID-19 vaccines.\n",
+      "\n",
+      "We've gone from America First to Terrorists First in the most literal of ways.\n",
+      "\n",
+      "Annotation #24: The plan to vaccinate detainees at Guantanamo Bay has been paused.    Link here: https://thehill.com/policy/defense/536626-pentagon-pauses-plan-to-offer-coronavirus-vaccine-to-guantanamo-bay-prisoners          \n",
+      "\n",
+      "Tweet #25: Hey @jrpsaki YOUR #vaccines DO NOT work! Complete failure. The truth will prevail. Evil witch! https://t.co/hSSuedBPE6\n",
+      "\n",
+      "Annotation #25: All COVID-19 vaccines currently available in the United States are effective at preventing COVID-19 as seen in clinical trial settings. COVID-19 vaccination helps protect people from getting sick or severely ill with COVID-19 and might also help protect people around them.    https://www.cdc.gov/coronavirus/2019-ncov/vaccines/effectiveness.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the first 25 consensus helpful notes\n",
+    "helpful = notes.merge(consensus, left_on='noteId', right_on='noteId')\n",
+    "helpful = helpful[helpful[('helpfulBinary', 'mean')] > 0.9]\n",
+    "helpful = helpful[helpful['classification'] == \"MISINFORMED_OR_POTENTIALLY_MISLEADING\"]\n",
+    "helpful = helpful[helpful['tweetText'].notnull()]\n",
+    "helpful = helpful.reset_index(drop=True)\n",
+    "\n",
+    "print('Examples of Helpful Notes')\n",
+    "for idx, row in helpful.iterrows():\n",
+    "    print()\n",
+    "    print(f'Tweet #{idx + 1}: ' + row['tweetText'])\n",
+    "    print()\n",
+    "    print(f'Annotation #{idx + 1}: ' + row['summary'])\n",
+    "    if idx + 1 == 25:\n",
+    "        break"
    ]
   }
  ],
